fix: correct overflow hidden

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,7 +8,7 @@ body {
     background-color: #000000;
     margin-left: 8.3%;
     margin-right: 8.3%;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .title {
